<resources>
    <string name="app_name">MenimCell</string>
    <string name="heyet">Life is more beautiful with </string>
    <string name="heyet2"> Azercell! </string>
    <string name="xaiw">Please, sign up to use our services</string>
    <string name="qeydiyyat" translatable="false">Sign Up</string>
    <string name="nomreqeyd">Enter The Number</string>
    <string name="buttondavam">Verify your number</string>
    <string name="code">Kodı daxil edin</string>
    <string name="daxil">Davam et</string>
    <string name="title_activity_balance_menu">MenimCell</string>
    <string name="title_home">Home</string>
    <string name="title_Xercler">Services</string>
    <string name="title_Xidmetler">Services</string>
    <string name="title_Servis">Contacts</string>
    <string name="title_Ayar">More</string>
    <string name="balans_artirma">Refill</string>
    <string name="_5_30">5.30</string>
    <string name="mb">MB</string>
    <string name="deqiqe">Minutes</string>
    <string name="sms">SMS</string>
    <string name="azn">AZN</string>
    <string name="etrafli">More</string>
    <string name="azercellim">Azercellim</string>
    <string name="sebeke_daxil">The best on-net tariff!</string>
    <string name="gencol">Genc OL</string>
    <string name="gencolDes">Unlimited internet and opportunities</string>
    <string name="bolge">Bolge</string>
    <string name="bolgeDes">free calls in regions</string>
    <string name="gencsim">GencSim</string>
    <string name="gencsimDes">0 after third minute</string>
    <string name="komboDes">Minutes, SMS and Internet - all in one</string>
    <string name="kombo">Kombo</string>
    <string name="telebe">Telebe 1-liyi</string>
    <string name="telebeDes">Students exclusive</string>
    <string name="tarifler">Tariffs</string>
    <string name="MIP">Internet Packages</string>
    <string name="ayliqMip">Monthly Packages</string>
    <string name="gundelikMip">Daily Packages</string>
    <string name="limitsizMip">Unlimited Packages</string>
    <string name="yenichat">Online Chat</string>
    <string name="servisecDes">The service allows you to use a range of services on your number online. Online self-service enables you to use many services independently.</string>
    <string name="Roaming">Roaming</string>
    <string name="balanceUSSDcode">*111*1*7</string>
    <string name="mip50mbUSSDcode">*100*50</string>
    <string name="mip500mbUSSDcode">*100*500</string>
    <string name="mip1000mbUSSDcode">*100*1000</string>
    <string name="mip5000mbUSSDcode">*100*5000</string>
    <string name="mip10000mbUSSDcode">*100*10000</string>
    <string name="mip50000mbUSSDcode">*100*50000</string>
    <string name="mipGUN50mbUSSDcode">*100*50+</string>
    <string name="mipGUN500mbUSSDcodeOnce">*100*24</string>
    <string name="mipGUN500mbUSSDcode">*100*24+</string>
    <string name="mip1saadUSSDcode">*100*60</string>
    <string name="mip3saadUSSDcode">*100*180</string>
    <string name="mipHeftesonuUSSDcode">*100*67</string>
    <string name="ussdCodeOneAzn">*150</string>
    <string name="ussdCodeOneFortyAzn">*250</string>
    <string name="ussdCodeOneEightyAzn">*290</string>
    <string name="ussdCodeTwoAzn">*155</string>
    <string name="activateRoamingUSSD">*135*1</string>
    <string name="azercellimTarrif">*750*4*3</string>
    <string name="gencsimTarrif">*750*4*5</string>
    <string name="bolgeTarrif">*750*4*4</string>
    <string name="g5Tarrif">*750*4*1</string>
    <string name="g8Tarrif">*750*4*2</string>
    <string name="k8Tarrif">*750*4*8</string>
    <string name="k16Tarrif">*750*4*16</string>
    <string name="balanceUSSDcodeB">*100</string>
    <string name="Umelumat">INFORMATION</string>
    <string name="sebekeDaxiliZengler">Local calls on-net (1 min.)</string>
    <string name="qepik">AZN</string>
    <string name="sebekeXaric">Local calls off-net (1 min.)</string>
    <string name="derhalQosulma">Join Immediately</string>
    <string name="azercelimInterval">​* Charging interval: for calls – 1 minute, for Internet – 51 KB</string>
    <string name="azercelimTarifQiymeti">Change the Tariff. The Price is</string>
    <string name="zengler">Calls</string>
    <string name="internet">Internet</string>
    <string name="kredit">Credits</string>
    <string name="thirdparty">3rd Party Companies</string>
    <string name="transfer">Transfer</string>
    <string name="AzercelimWebDes">Azercellim is the most suitable tariff for frequent calls. Subscribers can enjoy great-value prices both for on-net and off-net calls.</string>
    <string name="autoyeniletme">with auto-renewal</string>
    <string name="paketPrice">Subscription fee</string>
    <string name="olkedaxili">Local calls</string>
    <string name="gencolarasi">Calls among GencOL subs.</string>
    <string name="tarifdaxilisms">On-net SMS</string>
    <string name="min">Min</string>
    <string name="gb">GB</string>
    <string name="tarifdaxilizengleristifadensonra">* Calls among GəncOL : 1 min. = 0.02 AZN</string>
    <string name="interval1deq">Charging interval for call is 1 minute.</string>
    <string name="GencOlWebDes">Can not imagine your life without Internet? Join Genc OL tariff as well as other young people!</string>
    <string name="sebekeDaxilZengSayi">On-net minutes</string>
    <string name="limitsiz">Unlimited</string>
    <string name="komboTarifDesWeb">Join one of the Kombo packs offered within the tariff and save on your phone bills. Сall minutes, Internet traffic and unlimited SMS - all combined in one bundle!</string>
    <string name="TariffDesWebBolge">Subcribers living in regions can join Bolge tariff and enjoy best value prices for local calls. In addition, on-net calls are free of charge after the 3rd minute. Maximum duration of each call is 15 minutes.</string>
    <string name="bolgedeZeng">Calls in regions (1 min.)</string>
    <string name="intervalBolge">* Charging interval: for calls – 30 seconds, for Internet – 51 KB.</string>
    <string name="GensimDesWeb">Do you spend too much time on calls? Then join GencSim tariff and get free on-net calls after the 3rd minute and free 2nd SMS / MMS</string>
    <string name="MaximumMin">* Only on-net calls are free. Maximum duration of each free call is 40 minutes.</string>
    <string name="TelebeDesWeb">Join our student tariff and enjoy a great value prices on calls with your students fellows. In addition, get discount on our Internet packs.</string>
    <string name="telebeZengler">Calls within tariff (1 min.)</string>
    <string name="intervaltelebe">* Charging interval for calls within tariff – 1 minute.</string>
    <string name="telebeMip20percent">Moreover, you get 20% discount on Mobile Internet packs</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="rules9595">Right after SIM card is mounted in your phone SMS with appropriate settings will be sent to your phone. Received settings should be saved in your phone memory.</string>
    <string name="firstly9595">* First of all you will receive information message (information message can be deleted). During next 20 minutes you will receive internet/MMS settings.</string>
    <string name="secondly9595">* Restart the phone</string>
    <string name="recieve9595">Receive the Settings</string>
    <string name="PleaseEnteryourN">Please, Enter Your Number!</string>
    <string name="nonSIMSIMnumb">This is not SimSim number</string>
    <string name="noAnyNumb">No any Number</string>
    <string name="connect">Connet</string>
    <string name="internetSettings">Internet Settings</string>
    <string name="nearestoficces">Nearest Offices</string>
    <string name="trafficUsage">Traffic Usage</string>
    <string name="all">All</string>
    <string name="title_activity_maps">Map</string>
    <string name="nearestOffices">Show Nearest Offices</string>
    <string name="AllProgressNumb">87</string>
    <string name="CallsProgress">61</string>
    <string name="InternetProgress">79</string>
    <string name="CreditsProgress">27</string>
    <string name="allProgressTittle">-All-</string>
    <string name="MainMenu">Main Menu</string>
    <string name="settings">Settings</string>
    <string name="learnBalanceCode">*111*1*7#</string>
    <string name="OnlineOdemeRefill">https://azercell.3dsecure.az/</string>
    <string name="giveReport">Give me a report</string>
    <string name="callSignature">Call Signature</string>
    <string name="secondLine">second line</string>
    <string name="MeneZengEt">Call Me</string>
    <string name="gizlicellGizletcell">Clir Soclir</string>
    <string name="callScreeningPlus">call Screening +</string>
    <string name="callScreening">Call Screening</string>
    <string name="duetCard">Duet Card</string>
    <string name="callForwarding">Call Forwarding</string>
    <string name="voiceMail">Voicemail</string>
    <string name="send">Send</string>
    <string name="paycell">PAYCELL</string>
    <string name="enterTheNumbYouSend">Enter The Number You Send</string>
    <string name="pleaseEnterFullNumb">Please, enter full Phone Number</string>
    <string name="Succes">Succes</string>
    <string name="Error">Error</string>
    <string name="areYouSure">Are You Sure?</string>
    <string name="HowMuchToast">How much?</string>
    <string name="ThePriceOfSMS">The price of SMS </string>
    <string name="cancel">Cancel</string>
    <string name="tariffPriceIs">Tariff\'s price is</string>
    <string name="smsPrice">0.01 AZN</string>
    <string name="k8Price">8</string>
    <string name="simpleTarrif">1</string>
    <string name="k16Price">16</string>
    <string name="g5Price">5</string>
    <string name="g8Price">8</string>
    <string name="mipFiftyPrice">50 MB - 1 AZN</string>
    <string name="mipfiveHundredPrice">500 MB - 3 AZN</string>
    <string name="mipOneGbPrice">1 GB - 5 AZN</string>
    <string name="mipFiveGbPrice">5 GB - 10 AZN</string>
    <string name="mipTenGbPrice">10 GB - 15 AZN</string>
    <string name="mipUnlimitPrice">Limitsiz - 30 AZN</string>
    <string name="thePriceOf">The Price of</string>
    <string name="simCreditTittle">SimCredit</string>
    <string name="simCreditDes">If you need to make an urgent call or send SMS, but you do not have any credit, you can use SimKredit.</string>
    <string name="creditOneAzn">1 AZN</string>
    <string name="creditOneFortyAzn">1.40 AZN</string>
    <string name="creditOneEightyAzn">1.80 AZN</string>
    <string name="creditTwoAzn">2 AZN</string>
    <string name="deaktive">Deactivate</string>
    <string name="credit">Credit</string>
    <string name="CallBarring">Call Barring</string>
    <string name="CallBarringDesc">Depending on your choice, you can use the following options to block calls:</string>
    <string name="AllIncoming">All Incoming</string>
    <string name="AllOutgoing">All Outgoing</string>
    <string name="Calls">Calls</string>
    <string name="byDefault0000"><font size="15">0000 by default</font></string>
    <string name="setYourBarringCode">Set your Barring code:</string>
    <string name="Activate">Activate</string>
    <string name="gizletCelllDes">With Gizlətcell (SOCLIR) option you can withhold your number on your request.</string>
    <string name="gizletCellDesX">To use this function you only need to dial #31# before the number you are calling to.</string>
    <string name="gizletcellOnedayPrice">1 day - 0.2 AZN</string>
    <string name="gizletcellSevenDayPrice">7 days - 1.18 AZN</string>
    <string name="gizletcellthirtydayPrice">30 days - 4.13 AZN</string>
    <string name="gizletcelldesCLIR">With Gizlicell (CLIR) option you can permanently withhold your number.</string>
    <string name="CLIRPrice">CLIR - 11.80 AZN</string>
    <string name="ClirSubscription">For SUBSCRIPTION Apply to Customer Care or Azercell Express offices</string>
    <string name="getbalance">Get Balance</string>
    <string name="refillOnline">Refill Online</string>
</resources>