<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/home"
        android:showAsAction="always"
        android:title="@string/title_home"
        app:showAsAction="ifRoom|withText"
        tools:ignore="AppCompatResource" />
    <item
        android:id="@+id/navigation_xidmetler"
        android:icon="@drawable/services"
        android:title="@string/title_Xidmetler"
        app:showAsAction="ifRoom|withText" />
    <item
        android:id="@+id/navigation_xercler"
        android:icon="@drawable/expences"
        android:title="@string/title_Xercler"
        app:showAsAction="ifRoom|withText" />
    <item
        android:id="@+id/navigation_ayar"
        android:icon="@drawable/more"
        android:title="@string/title_Ayar"
        app:showAsAction="ifRoom|withText" />
</menu>
